--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "validator",
+  "name": "simple-validator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "typescript": "^4.5.5"
   }
