--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-validator",
+  "name": "simple-validator-node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
