--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "simple-validator-node",
-  "version": "1.2.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.2.1",
+  "description": "A super set with some methods to validate values",
+  "type": "module",
+  "main": "validator.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
