--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
   "name": "simple-validator-node",
-  "version": "1.2.4",
+  "version": "1.2.8",
   "description": "A super set with some methods to validate values",
-  "type": "module",
-  "main": "validator.ts",
+  "main": "validator.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^17.0.13",
-    "typescript": "^4.5.5"
-  }
+  "license": "MIT"
 }
