--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "simple-validator-node",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "description": "A super set with some methods to validate values",
+  "type": "module",
   "main": "validator.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
